feat: Room 엔티티 추가